# AgentIT

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  agentit.db  pyproject.toml  sbom.cdx.json
.agentit/codechange/: code-changes-summary.md  patch-01-.env.example
.agentit/compliance/: compliance-cronjob.yaml  compliance-evidence.md  kyverno-policies.yaml
.agentit/infrastructure/: hpa.yaml  limitrange.yaml  namespace.yaml  pdb.yaml  resourcequota.yaml
.agentit/observability/: grafana-dashboard-cm.yaml
.agentit/skills/: agentit-argocd-application.yaml  agentit-audit-policy.yaml  agentit-compliance-cronjob.yaml  agentit-cosign-sign-task.yaml  agentit-cost-cronjob.yaml  agentit-data-archive-job.yaml  agentit-dependency-cronjob.yaml  agentit-image-registry-policy.yaml  agentit-image-scan-task.yaml  agentit-namespace.yaml  agentit-sbom-task.yaml  agentit-service-monitor.yaml  agentit-tekton-pipeline.yaml  agentit-vpa.yaml
.cursor/rules/: portal-edl.mdc
.github/: dependabot.yml
.github/workflows/: security.yml  tests.yml
agents/: codechange.md  cost.md  dependency.md
alembic/: env.py
argocd/: application.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: agentit-alerting-rules.yaml  agentit-alertmanager-config.yaml  agentit-audit-policy.yaml  agentit-compliance-cronjob.yaml  agentit-cost-cronjob.yaml  agentit-data-archive-job.yaml  agentit-dependency-cronjob.yaml  agentit-hpa.yaml  agentit-image-registry-policy.yaml  agentit-image-scan-task.yaml  agentit-kyverno-require-labels.yaml  agentit-limitrange.yaml  agentit-pdb.yaml  agentit-resourcequota.yaml  agentit-sbom-task.yaml  agentit-service-monitor.yaml  agentit-tekton-pipeline.yaml  agentit-vpa.yaml  alertmanager-config.yaml  analysistemplate.yaml  canary-service.yaml  deployment.yaml  grafana-dashboard.yaml  internal-webhook-token-secret.yaml  networkpolicy-agents.yaml  networkpolicy.yaml  oauth-proxy-secret.yaml  pdb.yaml  prometheusrule.yaml  pvc-backup.yaml  pvc.yaml  rbac.yaml  resourcequota.yaml  route.yaml  secret-init-job.yaml  secret-rotation-cronjob.yaml  service.yaml  servicemonitor.yaml  synthetic-probe-cronjob.yaml  synthetic-probe-networkpolicy.yaml
checks/cicd/: ci-pipeline.yaml  (+2 more)
docs/: README.md  agent-removal-readiness.md  agentit-pr-types-quality-review.md  architecture-agentit-vs-fleet-gitops.md  architecture.md  capabilities-ux-redesign-notes.md  changelog-dogfood-notes.md  checks-remediations-intent-audit.md  ci-deploy.md  cicd-stall-hardening-2026-07-17.md  code-review-2026-07-12.md  compare.md  deployment.md  dogfood-self-improve-milestone.md  extension-model-unification-plan-phase2.md  extension-model-unification-spec.md  kafka-hardening-plan.md  ledger-design-spec.md  onboarding-loop-vision-gap-analysis.md  plan-quality-helpful-prs.md  portal-crawl-matrix.md  portal-experience-design-language.md  postgres-migration-plan.md  release-notes.md  score-methodology.md  self-improvement-for-agentit.md  ui-redesign-proposal.md  unified-apply-flow.md  ux-design-requirements.md
examples/: sample-assessment.json  sample-assessment.md
scripts/: check_portal_edl.py  ci-merge-gate.sh  pre-commit-secrets-check.sh
tests/: conftest.py  test_agent_base.py  test_agent_containerization.py  test_agent_registration.py  test_agent_registry_cleanup.py  test_all_checks.py  test_all_skills.py  test_api_contracts.py  test_apply_to_cluster_route.py  test_apply_with_verification.py  test_assess_concurrency.py  test_assess_onboard_default_chaining.py  test_assess_submit_postgres.py  test_assessment_detail_reassess.py  test_audit_wire.py  test_auto_delivery.py  test_automode.py  test_automode_allowlist.py  test_automode_extended.py  test_browser.py  test_browser_critical.py  test_capability_scout.py  test_capability_scout_watcher.py  test_capability_ssa_filter.py  test_chaos_agent.py  test_check_catalog.py  test_check_engine.py  test_ci_workflows.py  test_cicd.py  test_cicd_agent.py  test_clear_evidence.py  test_clearable_findings.py  test_cli.py  test_cli_commands.py  test_cloner.py  test_cluster_apply.py  test_cluster_apply_rbac.py  test_cluster_dry_run.py  test_codechange_agent.py  test_compliance.py  (+157 more)
watchers/: capability-scout.md  drift-detector.md  reassess-scheduler.md  self-health-check.md  skill-learner.md  slo-tracker.md  vuln-watcher.md
(+351 files in other folders)
