[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentit"
version = "0.1.0"
description = "Enterprise Readiness Assessor for AgentIT"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1.41",
    "pydantic>=2.7",
    "rich>=13.0",
    "anthropic[vertex]>=0.42",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "kafka-python>=2.0",
    "kubernetes>=31.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
agentit = "agentit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_repo: tests that clone real repositories (use --run-real-repos to enable)",
    "live_cluster: e2e tests against a live OpenShift cluster (use --live-cluster to enable)",
    "browser: Playwright browser tests (run with --browser-tests)",
]
filterwarnings = [
    "ignore::DeprecationWarning:starlette",
]
