[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentit"
version = "0.1.0"
description = "Enterprise Readiness Assessor for AgentIT"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1.41",
    "pydantic>=2.7",
    "rich>=13.0",
    "anthropic[vertex]>=0.42",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "kafka-python>=2.0",
    "kubernetes>=31.0",
    # Async Postgres driver for the planned store.py migration off SQLite —
    # see docs/postgres-migration-plan.md. Not wired into any code yet.
    "asyncpg>=0.29",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    # Postgres is the only supported store -- nearly the whole suite is
    # async now. See pytest.ini_options below and
    # docs/postgres-migration-plan.md's testing-strategy history.
    "pytest-asyncio>=0.24",
]

[project.scripts]
agentit = "agentit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_repo: tests that clone real repositories (use --run-real-repos to enable)",
    "live_cluster: e2e tests against a live OpenShift cluster (use --live-cluster to enable)",
    "browser: Playwright browser tests (run with --browser-tests)",
    "llm_eval: LLM evaluation tests (run with --run-llm-evals, requires API key)",
    "postgres: informational only -- every test that touches the store needs Postgres now, not just these; see tests/conftest.py",
]
asyncio_mode = "auto"
# Postgres is the only supported store, and `asyncpg` connection pools are
# bound to the event loop that created them. tests/conftest.py's
# session-scoped, shared AssessmentStore/pool (reused by every test rather
# than recreated per test, for speed -- see its module docstring for the
# full tradeoff) therefore needs every async test/fixture in the whole
# suite to run on the *same* event loop, not a fresh one per test
# (pytest-asyncio's default). Session-scoping both here is what makes that
# safe.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning:starlette",
]
